--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,7 @@
     align-items: center;
     justify-content: center;
     background-size: cover;
-    background-image: url('assets/img/fundo.jpg');
+    background-image: url('/assets/img/fundo.jpg');
     color: #fff;
 }
 
